# rag-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rag_pipeline/: models.py  pipeline.py
src/rag_pipeline/ingestion/: chunker.py  note_reader.py
tests/: test_basic.py  test_chunker.py
tests/ingestion/: test_note.md  test_note_reader.py  test_pipeline.py
